# lattice-summaries

./: .gitignore  README.md  config.toml  conftest.py  dodo.py  lattice-file-requirements.md  pyproject.toml
actions/: __init__.py  convert_lattices.py  lattice_info.py  twiss_apace.py  twiss_elegant.py  twiss_madx.py
config/: twiss.ele
tests/: test_apace.py  test_elegant.py  test_lattice_info.py  test_madx.py  todo.md
